# anduril_genesis

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.yaml  pyproject.toml
check/: controller.py  dump_track.py  fly_and_probe.py  mavlink_rx.py  probe_telemetry.py
configs/: train.yaml
genesis_rl/: config.py  contracts.py  course.py  curriculum.py  drone.py  frames.py  latency.py  rewards.py  scene_builder.py  scripted_pilot.py  user_config.py
genesis_rl/dcl/: client.py  recorder.py  win_relay.py  yolox_gate.py
genesis_rl/envs/: genesis_race_env.py
genesis_rl/models/: actor.py  critic.py  encoder.py  temporal.py
genesis_rl/scripts/: analyze_flight.py  analyze_sysid.py  bench_collector.py  eval_video.py  export_buffer.py  fly_dcl.py  preview.py  sysid_genesis_replay.py  train.py  yolox_overlay.py
genesis_rl/sensors/: camera_rig.py  gate_detector.py  imu.py
genesis_rl/tests/: test_course.py  test_frames.py  test_latency.py  test_nstep.py  test_projection.py
genesis_rl/training/: checkpoint.py  collector.py  learner.py  loggers.py  nstep.py  orchestrator.py  profiling.py  replay.py  sac.py
src_anduril/: main.py  setup.py
