[project]
name = "genesis-rl"
version = "0.1.0"
description = "AI Grand Prix drone-racing RL: Genesis sim-to-sim pretraining with asymmetric SAC"
requires-python = "==3.12.*"
dependencies = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "genesis-world",
    "numpy>=1.26,<3",
    "pyyaml>=6.0",
    "tensorboard>=2.17",
    "opencv-python-headless>=4.10",
    "imageio[ffmpeg]>=2.34",
    "matplotlib>=3.9",
    "pillow>=10.0",
    "trimesh>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
wandb = ["wandb>=0.19"]

[tool.uv.sources]
genesis-world = { git = "https://github.com/Genesis-Embodied-AI/genesis-world.git", tag = "v1.2.3" }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["genesis_rl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["genesis_rl/tests"]
